--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,9 +1,9 @@
-.app-background {
+.app-outer {
   @apply min-h-screen;
   @apply bg-gray-200;
 }
 
-.app-container {
+.app {
   @apply mx-auto;
   @apply bg-white mt-4 rounded-lg;
   @apply p-4;
