--- a/src/Racers/ListRacers/ListRacers.css
+++ b/src/Racers/ListRacers/ListRacers.css
@@ -25,3 +25,21 @@
   @apply rounded-b-lg;
   @apply p-4;
 }
+
+.page-navigation {
+  @apply float-right;
+}
+
+.page-navigation__button {
+  @apply bg-gray-400;
+  @apply rounded-md;
+  @apply mx-2 px-2 py-1;
+
+  &:hover {
+    @apply bg-gray-500;
+  }
+}
+
+.page-navigation__index-page {
+  @apply mx-2;
+}
