--- a/src/Racers/NavigateRacers/NavigateRacers.css
+++ b/src/Racers/NavigateRacers/NavigateRacers.css
@@ -5,11 +5,23 @@
   @apply p-4;
 }
 
-.navigation-list-racers__page-navigation {
+.page-navigation {
   @apply float-right;
 }
 
-.page-navigation__button {
+.page-navigation__previous-page {
+  @extend %page-navigation__button;
+}
+
+.page-navigation__index-page {
+  @apply mx-2;
+}
+
+.page-navigation__next-page {
+  @extend %page-navigation__button;
+}
+
+%page-navigation__button {
   @apply bg-gray-400;
   @apply rounded-md;
   @apply mx-2 px-2 py-1;
@@ -17,8 +29,9 @@
   &:hover {
     @apply bg-gray-500;
   }
-}
 
-.page-navigation__index-page {
-  @apply mx-2;
+  &:disabled {
+    @apply bg-gray-300;
+    @apply cursor-not-allowed;
+  }
 }
