--- a/src/Racers/Racers.css
+++ b/src/Racers/Racers.css
@@ -1,13 +1,13 @@
-.racers {
+@block racers {
   @apply flex flex-row;
-}
 
-.racers__add-racer {
-  @apply w-1/3;
-  @apply p-12;
-}
+  @element add-racer {
+    @apply w-1/3;
+    @apply p-12;
+  }
 
-.racers__list-racers {
-  @apply w-2/3;
-  @apply p-12;
+  @element list-racers {
+    @apply w-2/3;
+    @apply p-12;
+  }
 }
