--- a/src/Racers/Racers.css
+++ b/src/Racers/Racers.css
@@ -1,13 +1,19 @@
 @block racers {
   @apply flex flex-row;
 
-  @element add-racer {
+  @element left-panel {
     @apply w-1/3;
     @apply p-12;
   }
 
-  @element list-racers {
+  @element right-panel {
     @apply w-2/3;
     @apply p-12;
+  }
+}
+
+@block right-panel {
+  @element search-racers {
+    @apply pb-8;
   }
 }
