--- a/src/Racers/Racers.css
+++ b/src/Racers/Racers.css
@@ -1,14 +1,19 @@
 @block racers {
-  @apply flex flex-row;
+  @apply flex flex-row flex-wrap;
+
+  @element sumary {
+    @apply w-full;
+    @apply px-12 py-4;
+  }
 
   @element left-panel {
     @apply w-1/3;
-    @apply p-12;
+    @apply px-12 py-2;
   }
 
   @element right-panel {
     @apply w-2/3;
-    @apply p-12;
+    @apply px-12 py-2;
   }
 }
 
