--- a/src/Racers/ListRacers/ListRacers.css
+++ b/src/Racers/ListRacers/ListRacers.css
@@ -24,12 +24,17 @@
 
 @block header {
   @element name {
-    @apply flex-none w-6/12;
+    @apply flex-none w-4/12;
+    @apply font-bold;
+  }
+
+  @element team {
+    @apply flex-none w-3/12;
     @apply font-bold;
   }
 
   @element category {
-    @apply flex-none w-4/12;
+    @apply flex-none w-3/12;
   }
 
   @element actions {
