--- a/src/Racers/ListRacers/ListRacers.css
+++ b/src/Racers/ListRacers/ListRacers.css
@@ -29,12 +29,16 @@
   }
 
   @element team {
-    @apply flex-none w-3/12;
+    @apply flex-none w-2/12;
     @apply font-bold;
   }
 
   @element category {
-    @apply flex-none w-3/12;
+    @apply flex-none w-2/12;
+  }
+
+  @element tracking-number {
+    @apply flex-none w-2/12;
   }
 
   @element actions {
